[package]
name = "webtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
tokio = { version = "1.34.0", features = ["full"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
futures = "0.3.28"
argon2 = "0.5.2"
chrono = { version = "0.4.31", features = ["serde"]}
anyhow = "1.0.75"
axum-extra = { version = "0.9.0", features = ["cookie"]}

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]