[package]
name = "webtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.75"
futures = "0.3.28"

chrono = { version = "0.4.31", features = ["serde"]}

axum = "0.7.1"
axum-extra = { version = "0.9.0", features = ["cookie"]}

argon2 = "0.5.2"
aws-config = { features = ["behavior-version-latest"], version = "1.1.1"}
aws-sdk-sesv2 = "1.7.0"


[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime" , "bson-uuid-1"]

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]